ho========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'master' branch.


2020-07-25

 - Release 2.3.1 as dependency for beanprice.
 - Moved beancount.prices.find_prices to beancount.ops.find_prices in
   preparation of moving price fetching code to a new 'beanprice' repository.


2020-07-17

 - Fixed bug #508 in beancount.plugins.unique_prices.


2020-07-06

 - Updated export script to honor lowercase "ignore" instead of "IGNORE" and set
   default tax type to "taxable" instead of "TAXABLE" so that changes in PR 472
   don't pick up the metadata as currencies.


2020-07-05

 - Removed bean-report and all associated codes. Use bean-query instead (or
   Fava).
 - Removed bean-web and bean-bake (for v3). Use Fava instead.
 - Moved beancount.web.scrape to beancount.utils.scrape in preparation of
   removing beancount.web.
 - Removed experiments/portfolio for its dependency on beancount.reports code
   (this script was obsolete anyway).
 - Moved get_assets_holdings() function out of reports code to preserve it for
   use by an experimental script (in preparation for removing beancount.reports).
 - Moved beancount.scripts.tutorial to beancount.reports.tutorial in preparation
   of removing beancount.reports and beancount.web.
 - Moved beancount.reports.context to beancount.parser.context in preparation of
   removing beancount.reports and beancount.web.
 - Moved beancount.reports.table to beancount.utils.table in preparation of
   removing beancount.reports and beancount.web.


2020-07-04

  - Fixed #494, invalid account used for clamping the period view
    (Equity:Conversions:Previous instead of Equity:Conversions:Current).


2020-06-27

  - Merged PR #484, some parser improvements by @dnicolodi.
  - Merged PR #488 from branch beancount/pr135_ppmarciniak_fixnetworth by
    @pmarciniak.
  - Merged branch pr131_tohojo_csvtweaks (BitBucket PR 131) by @tohojo, fixed